@@ -1,0 +1,63 @@
+// $Id$
+/*
+ * CraftBook
+ * Copyright (C) 2010 sk89q <http://www.sk89q.com>
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program. If not, see <http://www.gnu.org/licenses/>.
+*/
+
+package com.sk89q.craftbook.ic;
+
+import com.sk89q.craftbook.*;
+
+/**
+ * Three input, three output family of ICs.
+ *
+ * @author sk89q
+ */
+public abstract class _3I3OFamilyIC implements IC {
+    /**
+     * Get the title of the IC.
+     *
+     * @return
+     */
+    public abstract String getTitle();
+
+    /**
+     * Returns true if this IC requires permission to use.
+     *
+     * @return
+     */
+    public boolean requiresPermission() {
+        return false;
+    }
+    /**
+     * Validates the IC's environment. The position of the sign is given.
+     * Return a string in order to state an error message and deny
+     * creation, otherwise return null to allow.
+     *
+     * @param sign
+     * @return
+     */
+    public String validateEnvironment(Vector pos, SignText sign) {
+        return null;
+    }
+    /**
+     * Get a new state to use.
+     *
+     * @param chip
+     * @return
+     */
+    public abstract void think(ChipState chip);
+}
